--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.31",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
